[tool.poetry]
name = "sofdesk"
version = "0.1.0"
description = "Description de votre projet"
authors = ["Coyote on "]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "3.11.4"
django = "3.2.5"
djangorestframework = "3.12.4"
requests = "2.26.0"
djangorestframework_simplejwt = "4.7.2"