[tool.poetry]
name = "softdesk"
version = "0.1.0"
description = "API softdesk qui gère la creation de projets, issues et comments"
authors = ["Coyote"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"



[tool.poetry.dependencies]
django = { version = "5.0.3", python = "^3.11" }
djangorestframework = { version = "3.14.0", python = ">=3.11" }
djangorestframework_simplejwt = { version = "5.3.1", python = "^3.11" }
requests = { version = "2.31.0", python = ">=3.11" }
